--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,8 @@
   </head>
   <body>
     <%= yield %>
-
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/javascripts/app.js"></script>
   </body>
 </html>
