--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -1,11 +1,7 @@
-<h1>Drinkers: <%= @shots %></h1>
 
-<ul>
-  <% @drinkers.each do |drinker| %>
-  <li>
-    <%= drinker.name %>
-  </li>
-  <% end %>
+
+<ul id="drinkers">
+
 </ul>
 
 <button id="playButton" name="playButton">Click me</button>
