--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,5 +11,6 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/javascripts/app.js"></script>
+    <script src="/javascripts/play.js"></script>
   </body>
 </html>
