--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -1,3 +1,33 @@
-<ul id="drinkers"></ul>
 
-<button id="playButton" name="playButton">Click me</button>
+<div class="row">
+  <div id="round" class="column">
+    <h1 id="roundText"></h1>
+  </div>
+</div>
+<div class="row">
+  <div id="play-field" class="column">
+    <h1 id="play-fieldText"></h1>
+  </div>
+</div>
+<div class="row">
+  <div class="text-center column">
+    <button class="button text-center" id="playButton" name="playButton">Play</button>
+    <button class="button text-center" id="showAnswerButton" name="showAnswerButton">Show Answer</button>
+    <button class="button text-center" id="correctButton" name="correctButton">You got it!</button>
+    <button class="button text-center" id="incorrectButton" name="incorrectButton">Dropped the ball!</button>
+  </div>
+</div>
+<div class="row">
+  <div id="one" class="team column small-3">
+    1
+  </div>
+  <div id="two" class="team column small-3">
+    2
+  </div>
+  <div id="three" class="team column small-3">
+    3
+  </div>
+  <div id="four" class="team column small-3">
+    4
+  </div>
+</div>
