--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,5 +19,6 @@
     <script src="/javascripts/vendor/what-input.min.js"></script>
     <script src="/javascripts/foundation.min.js"></script>
     <script src="/javascripts/play.js"></script>
+    <script src="/javascripts/teams.js"></script>
   </body>
 </html>
