add sort to shortest team functionality

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <!-- <link rel="stylesheet" href="/stylesheets/jquery-ui.min.css"> -->
     <link rel="stylesheet" href="/stylesheets/foundation.css" />
     <link rel="stylesheet" href="/stylesheets/app.css" />
   </head>
@@ -15,8 +16,10 @@
         </div>
       </div>
     </div>
+    <script src="/javascripts/lodash.min.js"></script>
     <script src="/javascripts/vendor/jquery.min.js"></script>
     <script src="/javascripts/vendor/what-input.min.js"></script>
+    <!-- <script src="/javascripts/jquery-ui.min.js"></script> -->
     <script src="/javascripts/foundation.min.js"></script>
     <script src="/javascripts/play.js"></script>
     <script src="/javascripts/teams.js"></script>
