sorted players save team id to db

--- a/app/views/players.erb
+++ b/app/views/players.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="column small-6">
-    <ul id="teamless" class="droptrue players">
+    <ul id="0" class="droptrue players">
       <% @players.each do |player| %>
       <li class="ui-state-default">
         <%= player.name %>
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="column">
         <h1>Team 1</h1>
-        <ul id="team-1" class="droptrue">
+        <ul id="1" class="droptrue">
           <% @team_1.each do |player| %>
           <li class="ui-state-default">
             <%= player.name %>
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="column">
         <h1>Team 2</h1>
-        <ul id="team-2" class="droptrue">
+        <ul id="2" class="droptrue">
           <% @team_2.each do |player| %>
           <li class="ui-state-default">
             <%= player.name %>
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="column">
         <h1>Team 3</h1>
-        <ul id="team-3" class="droptrue">
+        <ul id="3" class="droptrue">
           <% @team_3.each do |player| %>
           <li class="ui-state-default">
             <%= player.name %>
@@ -57,7 +57,7 @@
     <div class="row">
       <div class="column">
         <h1>Team 4</h1>
-        <ul id="team-4" class="droptrue">
+        <ul id="4" class="droptrue">
           <% @team_4.each do |player| %>
           <li class="ui-state-default">
             <%= player.name %>
