--- a/app/views/players.erb
+++ b/app/views/players.erb
@@ -16,6 +16,7 @@
       </fieldset>
     </form>
     <button class="button text-center" id="sortButton" name="sortButton">Sort Teams!</button>
+    <button class="button text-center" id="resetButton" name="resetButton">Reset Teams!</button>
   </div>
   <div id="teams-column" class="column small-6">
     <div class="row">
