--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -12,40 +12,46 @@
     <button class="button text-center" id="nextButton" name="nextButton">Next!</button>
   </div>
 </div>
-<div class="score-bar row">
-  <div class="one team column small-3">
-    <h1 class="team-name">
+
+<!-- Score Bar -->
+
+<div class="score-bar row medium-unstack align-middle align-spaced">
+  <div class="team column text-center">
+    <h3 class="team-name">
       <%= @team1.name %>
-    </h1>
-    <p class="score">
-      <%= @team1.score %>
-    </p>
+    </h3>
+      <p class="score score-circle">
+        <%= @team1.score %>
+      </p>
   </div>
-  <div class="team two column small-3">
-    <h1 class="team-name">
+  <div class="team column text-center">
+    <h3 class="team-name">
       <%= @team2.name %>
-    </h1>
-    <p class="score">
-      <%= @team2.score %>
-    </p>
+    </h3>
+      <p class="score score-circle">
+        <%= @team2.score %>
+      </p>
   </div>
-  <div class="team three column small-3">
-    <h1 class="team-name">
+  <div class="team column text-center">
+    <h3 class="team-name">
       <%= @team3.name %>
-    </h1>
-    <p class="score">
-      <%= @team3.score %>
-    </p>
+    </h3>
+      <p class="score score-circle">
+        <%= @team3.score %>
+      </p>
   </div>
-  <div class="team four column small-3">
-    <h1 class="team-name">
+  <div class="team column text-center">
+    <h3 class="team-name">
       <%= @team4.name %>
-    </h1>
-    <p class="score">
-      <%= @team4.score %>
-    </p>
+    </h3>
+      <p class="score score-circle">
+        <%= @team4.score %>
+      </p>
   </div>
 </div>
+
+<!-- allows selection of correct start team with saved game state -->
+
 <div class="on-deck hidden">
   <p><%= @current.name %></p>
 </div>
