--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="top-bar-right">
           <ul class="menu">
-            <li><a href="/players">Setup</a></li>
+            <li><a href="/setup">Setup</a></li>
             <li><a href="/play">Play</a></li>
           </ul>
         </div>
