add whack player

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,18 +31,21 @@
     <!-- <div class="container site-content"> -->
     <div class="container">
       <div class="row align-middle">
-        <div class="column">
+        <div class="column viewport">
           <%= yield %>
         </div>
       </div>
       <div class="push"></div>
     </div>
 
-    <footer class="row">
-      <div class="columns">
+    <!-- <footer class="footer">
+      <div class="row">
+        <div class="columns">
 
+        </div>
       </div>
-    </footer>
+
+    </footer> -->
 
     <script src="/javascripts/lodash.min.js"></script>
     <script src="/javascripts/vendor/jquery.min.js"></script>
